--- a/logon.html
+++ b/logon.html
@@ -68,6 +68,9 @@
                 </div>
 
             </div>
+            <div id="IndicadorMongo">
+                "Texto"
+            </div>
         </main>
 
         <!-- Javascript-->
