--- a/logon.html
+++ b/logon.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>!!! Registrar ou entrar</title>
+        <title>Registrar ou entrar</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
     <body>
@@ -59,17 +59,16 @@
                         const email = document.getElementById('EmailR').value;
                         const senha = document.getElementById('SenhaR').value;
 
-
                         const response = await fetch('http://localhost:3000/add-user', {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json'
-                            },
-                            body: JSON.stringify({ nome, email, senha })
-                        });
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ nome, email, senha })
+                    });
 
-                        const data = await response.json();
-                        console.log(data);
+                    const data = await response.json();
+                    console.log(data);
 
                     });
                 </script>
