--- a/logon.html
+++ b/logon.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Registrar ou entrar</title>
+        <title>Cadastro e entrada</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
     <body>
