--- a/logon.html
+++ b/logon.html
@@ -63,7 +63,7 @@
                         <button class="ExibirSenha" id="ExibirSenhaL" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
 
                         <input type="hidden" name="tipo" value="login">
-                        <button class="BotaoPrimario" type="submit" onclick="sessionStorage.setItem('usuario',document.getElementById('LoginFormulario').elements['email'].value)">Entrar</button>
+                        <button class="BotaoPrimario" type="submit">Entrar</button>
                     </form>
                 </div>
 
