--- a/logon.html
+++ b/logon.html
@@ -72,6 +72,7 @@
 
         <!-- Javascript-->
         <script src="js/logon.js"></script>
+        <script src="js/main.js"></script>
 
     </body>
 </html>
