Agora vai funcionar

--- a/alerta.html
+++ b/alerta.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>V1</title>
+        <title>V2</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
     <body>
@@ -29,7 +29,7 @@
                 <div class="CaixaAlertaConteudo">
                     <h2>Título</h2>
                     <p>This is a custom alert box</p>
-                    <button id="CaixaAlertaConfirmar">Confirma</button>
+                    <button id="CaixaAlertaConfirmar" class="BotaoPrimario">Confirma</button>
                 </div>
             </div>
 
