--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                             document.write(`<li><a href="logon"><button class="BotaoPrimario">Começar!</button></a></li>`);
                         }
                     </script>
-                    
                 </ul>
                 <div class="MenuIcone">
                     <button class="BotaoSecundario" id="MenuIcone"><img src="img/icone/menu.png" width="20px" height="20px"></button>
@@ -37,17 +36,7 @@
 
         <!-- Corpo -->
         <main>
-            <h1>O que é o Business PRO?</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis dignissim tortor, sit amet sagittis libero sodales sit amet. Praesent vitae elementum quam. Sed quam ante, molestie sed sollicitudin non, vulputate vel tortor. Mauris ligula felis, elementum non nibh quis, tincidunt semper odio. Fusce at cursus justo, ut suscipit sem. Curabitur eget suscipit arcu. Sed ornare consequat felis, accumsan condimentum risus efficitur sed. Duis rhoncus nisl quis magna cursus vestibulum. Curabitur vulputate, quam quis viverra egestas, diam risus facilisis leo, et sollicitudin ligula orci vel mi. Aenean sit amet felis ac purus rutrum tristique ut vitae ex.</p>
-            <h1>Como iniciar a utilização?</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis dignissim tortor, sit amet sagittis libero sodales sit amet. Praesent vitae elementum quam. Sed quam ante, molestie sed sollicitudin non, vulputate vel tortor. Mauris ligula felis, elementum non nibh quis, tincidunt semper odio. Fusce at cursus justo, ut suscipit sem. Curabitur eget suscipit arcu. Sed ornare consequat felis, accumsan condimentum risus efficitur sed. Duis rhoncus nisl quis magna cursus vestibulum. Curabitur vulputate, quam quis viverra egestas, diam risus facilisis leo, et sollicitudin ligula orci vel mi. Aenean sit amet felis ac purus rutrum tristique ut vitae ex.</p>
-            <h1>Documentação</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent mattis dignissim tortor, sit amet sagittis libero sodales sit amet. Praesent vitae elementum quam. Sed quam ante, molestie sed sollicitudin non, vulputate vel tortor. Mauris ligula felis, elementum non nibh quis, tincidunt semper odio. Fusce at cursus justo, ut suscipit sem. Curabitur eget suscipit arcu. Sed ornare consequat felis, accumsan condimentum risus efficitur sed. Duis rhoncus nisl quis magna cursus vestibulum. Curabitur vulputate, quam quis viverra egestas, diam risus facilisis leo, et sollicitudin ligula orci vel mi. Aenean sit amet felis ac purus rutrum tristique ut vitae ex.</p>
-            <script>
-                if(sessionStorage.getItem('UsuarioLogado') != null) {
-                    document.write(`<h1>Session Storage Teste</h1><p>Usuário logado: ${sessionStorage.getItem('UsuarioLogado')}</p>`);
-                };
-            </script>
+            Introdução ao BusinessPRO
         </main>
 
         <!-- Javascript-->
