--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
         <title>Business PRO</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
@@ -34,6 +35,104 @@
                 </div>
             </nav>
         </header>
+
+        <!-- Barra lateral -->
+        <nav id="BarraLateral" class="BarraLateral">
+
+            <!-- Conteúdo superior -->
+            <div id="BarraLateralConteudo">
+
+                <!-- Usuário -->
+                <div id="BarraLateralUsuario">
+                    <img src="img/BusinessPro.png" id="BarraLateralAvatar">
+                    <p id="BarraLateralUsuarioInfo">
+                        <span class="ItemDescricao">
+                            Fulano de tal
+                        </span>
+                        <span class="ItemDescricao">
+                            Lorem Ipsum
+                        </span>
+                    </p>
+                </div>
+
+                <!-- Lista de itens -->
+                <ul id="BarraLateralItens">
+
+                    <!-- Dashboard -->
+                    <li class="BarraLateralItem">
+                        <a href="#">
+                            <i class="fa-solid fa-chart-line"></i>
+                            <span class="BarraLateralItemDescricao">
+                                Dashboard
+                            </span>
+                        </a>
+                    </li>
+
+                    <!-- Usuários -->
+                    <li class="BarraLateralItem">
+                        <a href="#">
+                            <i class="fa-solid fa-user"></i>
+                            <span class="BarraLateralItemDescricao">
+                                Usuários
+                            </span>
+                        </a>
+                    </li>
+
+                    <!-- Notificações -->
+                    <li class="BarraLateralItem">
+                        <a href="#">
+                            <i class="fa-solid fa-bell"></i>
+                            <span class="BarraLateralItemDescricao">
+                                Notificações
+                            </span>
+                        </a>
+                    </li>
+
+                    <!-- Produtos -->
+                    <li class="BarraLateralItem">
+                        <a href="#">
+                            <i class="fa-solid fa-box"></i>
+                            <span class="BarraLateralItemDescricao">
+                                Dashboard
+                            </span>
+                        </a>
+                    </li>
+
+                    <!-- Imagens -->
+                    <li class="BarraLateralItem">
+                        <a href="#">
+                            <i class="fa-solid fa-image"></i>
+                            <span class="BarraLateralItemDescricao">
+                                Dashboard
+                            </span>
+                        </a>
+                    </li>
+
+                    <!-- Configurações -->
+                    <li class="BarraLateralItem">
+                        <a href="#">
+                            <i class="fa-solid fa-gear"></i>
+                            <span class="BarraLateralItemDescricao">
+                                Configurações
+                            </span>
+                        </a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <!-- Conteúdo inferior -->
+            <div id="BarraLateralLogout">
+                <button id="BarraLateralLogoutBotao">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    <span class="ItemDescricao">
+                        Logout
+                    </span>
+                </button>
+            </div>
+
+        </nav>
 
         <!-- Corpo -->
         <main>
