--- a/dashboard.html
+++ b/dashboard.html
@@ -11,30 +11,7 @@
         <title>Business PRO</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
-    <body>
-
-        <!-- Cabeçalho -->
-        <header>
-            <nav>
-                <div class="Logo">
-                    <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
-                </div>
-                <ul class="Lista">
-                    <li><button class="BotaoPrimario" onclick="UsuarioSair()">Sair</button></li>
-                    <!--
-                    <li>
-                        <form id="CabecalhoPesquisa">
-                            <input class="FormularioCampoPrimario" type="text" placeholder="Pesquisar" name="pesquisa">
-                            <button class="BotaoPrimario" type="submit"><img src="img/icone/pesquisa.png" width="20px" height="20px"></button>
-                        </form>
-                    </li>
-                    -->
-                </ul>
-                <div class="MenuIcone">
-                    <button class="BotaoSecundario" id="MenuIcone"><img src="img/icone/menu.png" width="20px" height="20px"></button>
-                </div>
-            </nav>
-        </header>
+    <body style="display: flex">
 
         <!-- Barra lateral -->
         <nav id="BarraLateral" class="BarraLateral">
