Melhoria css barra lateral

--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
                         <a href="#">
                             <i class="fa-solid fa-box"></i>
                             <span class="BarraLateralItemDescricao">
-                                Dashboard
+                                Produtos
                             </span>
                         </a>
                     </li>
@@ -80,7 +80,7 @@
                         <a href="#">
                             <i class="fa-solid fa-image"></i>
                             <span class="BarraLateralItemDescricao">
-                                Dashboard
+                                Imagens
                             </span>
                         </a>
                     </li>
@@ -101,7 +101,7 @@
 
             <!-- Conteúdo inferior -->
             <div id="BarraLateralLogout">
-                <button id="BarraLateralLogoutBotao">
+                <button class="BotaoSecundario" id="BarraLateralLogoutBotao">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="ItemDescricao">
                         Logout
