--- a/dashboard.html
+++ b/dashboard.html
@@ -101,7 +101,7 @@
 
             <!-- Conteúdo inferior -->
             <div id="BarraLateralLogout">
-                <button class="BotaoSecundario" id="BarraLateralLogoutBotao">
+                <button class="BarraLateralItem" id="BarraLateralLogoutBotao">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="ItemDescricao">
                         Logout
