Espero que dê tudo certo

--- a/logon.html
+++ b/logon.html
@@ -44,7 +44,7 @@
 
                         <label for="SenhaR">Senha</label><br>
                         <input class="FormularioCampoPrimario" type="password" id="SenhaR" name="senha" placeholder="****" required>
-                        <button class="ExibirSenha" id="ExibirSenhaR" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
+                        <button class="ExibirSenha" id="ExibirSenhaR" type="button"><i class="fa-solid fa-eye"></i></button><br>
 
                         <input type="hidden" name="tipo" value="cadastro">
                         <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
@@ -60,7 +60,7 @@
 
                         <label for="SenhaL">Senha</label><br>
                         <input class="FormularioCampoPrimario" type="password" id="SenhaL" name="senha" placeholder="****" required>
-                        <button class="ExibirSenha" id="ExibirSenhaL" type="button"><img src="img/icone/ExibirSenha.png" width="25px" height="25px"></button><br>
+                        <button class="ExibirSenha" id="ExibirSenhaL" type="button"><i class="fa-solid fa-eye"></i></button><br>
 
                         <input type="hidden" name="tipo" value="login">
                         <button class="BotaoPrimario" type="submit">Entrar</button>
