Mais ícones implementados

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </script>
                 </ul>
                 <div class="MenuIcone">
-                    <button class="BotaoSecundario" id="MenuIcone"><img src="img/icone/menu.png" width="20px" height="20px"></button>
+                    <button class="BotaoSecundario" id="MenuIcone"><i class="fa-solid fa-bars"></i></button>
                 </div>
             </nav>
         </header>
