--- a/dashboard.html
+++ b/dashboard.html
@@ -100,10 +100,10 @@
 
             <!-- Conteúdo inferior -->
             <div id="BarraLateralLogout">
-                <button class="BarraLateralItem" id="BarraLateralLogoutBotao">
+                <button onclick="UsuarioSair()" class="BarraLateralItem" id="BarraLateralLogoutBotao">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="ItemDescricao">
-                        Logout
+                        Sair da conta
                     </span>
                 </button>
             </div>
