--- a/dashboard.html
+++ b/dashboard.html
@@ -34,64 +34,36 @@
                 <!-- Lista de itens -->
                 <ul id="BarraLateralItens">
 
-                    <!-- Dashboard -->
+                    <!-- Início -->
                     <li class="BarraLateralItem">
-                        <a href="#">
-                            <i class="fa-solid fa-chart-line"></i>
-                            <span class="BarraLateralItemDescricao">
-                                Dashboard
-                            </span>
-                        </a>
+                        <i class="fa-solid fa-house"></i>
+                        <span class="BarraLateralItemDescricao">
+                            Início
+                        </span>
                     </li>
 
-                    <!-- Usuários -->
+                    <!-- Funcionários -->
                     <li class="BarraLateralItem">
-                        <a href="#">
-                            <i class="fa-solid fa-user"></i>
-                            <span class="BarraLateralItemDescricao">
-                                Usuários
-                            </span>
-                        </a>
-                    </li>
-
-                    <!-- Notificações -->
-                    <li class="BarraLateralItem">
-                        <a href="#">
-                            <i class="fa-solid fa-bell"></i>
-                            <span class="BarraLateralItemDescricao">
-                                Notificações
-                            </span>
-                        </a>
+                        <i class="fa-solid fa-people-group"></i>
+                        <span class="BarraLateralItemDescricao">
+                            Funcionários
+                        </span>
                     </li>
 
                     <!-- Produtos -->
                     <li class="BarraLateralItem">
-                        <a href="#">
-                            <i class="fa-solid fa-box"></i>
-                            <span class="BarraLateralItemDescricao">
-                                Produtos
-                            </span>
-                        </a>
+                        <i class="fa-solid fa-bag-shopping"></i>
+                        <span class="BarraLateralItemDescricao">
+                            Produtos
+                        </span>
                     </li>
 
-                    <!-- Imagens -->
+                    <!-- Estatísticas -->
                     <li class="BarraLateralItem">
-                        <a href="#">
-                            <i class="fa-solid fa-image"></i>
-                            <span class="BarraLateralItemDescricao">
-                                Imagens
-                            </span>
-                        </a>
-                    </li>
-
-                    <!-- Configurações -->
-                    <li class="BarraLateralItem">
-                        <a href="#">
-                            <i class="fa-solid fa-gear"></i>
-                            <span class="BarraLateralItemDescricao">
-                                Configurações
-                            </span>
-                        </a>
+                        <i class="fa-solid fa-chart-line"></i>
+                        <span class="BarraLateralItemDescricao">
+                            Estatísticas
+                        </span>
                     </li>
 
                 </ul>
