Mais correções de cor

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
         <title>Business PRO</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
-    <body style="display: flex">
+    <body id="BodyDashboard">
 
         <!-- Barra lateral -->
         <nav id="BarraLateral" class="BarraLateral">
