--- a/dashboard.html
+++ b/dashboard.html
@@ -35,9 +35,9 @@
                 <ul id="BarraLateralItens">
 
                     <!-- Início -->
-                    <li class="BarraLateralItem">
+                    <li class="BarraLateralItem ativo">
                         <i class="fa-solid fa-house"></i>
-                        <span class="BarraLateralItemDescricao">
+                        <span name="span" id="LateralAbaInicio" class="BarraLateralItemDescricao">
                             Início
                         </span>
                     </li>
@@ -45,7 +45,7 @@
                     <!-- Funcionários -->
                     <li class="BarraLateralItem">
                         <i class="fa-solid fa-people-group"></i>
-                        <span class="BarraLateralItemDescricao">
+                        <span name="span" id="LateralAbaFuncionarios" class="BarraLateralItemDescricao">
                             Funcionários
                         </span>
                     </li>
@@ -53,7 +53,7 @@
                     <!-- Produtos -->
                     <li class="BarraLateralItem">
                         <i class="fa-solid fa-bag-shopping"></i>
-                        <span class="BarraLateralItemDescricao">
+                        <span name="span" id="LateralAbaProdutos" class="BarraLateralItemDescricao">
                             Produtos
                         </span>
                     </li>
@@ -61,7 +61,7 @@
                     <!-- Estatísticas -->
                     <li class="BarraLateralItem">
                         <i class="fa-solid fa-chart-line"></i>
-                        <span class="BarraLateralItemDescricao">
+                        <span name="span" id="LateralAbaEstatisticas" class="BarraLateralItemDescricao">
                             Estatísticas
                         </span>
                     </li>
@@ -84,7 +84,27 @@
 
         <!-- Corpo -->
         <main>
-            Dashboard
+            
+            <!-- Início -->
+            <div class="CorpoAba" id="CorpoAbaInicio">
+                Início!
+            </div>
+
+            <!-- Funcionários -->
+            <div class="CorpoAba" id="CorpoAbaFuncionarios">
+                Funcionários!
+            </div>
+
+            <!-- Produtos -->
+            <div class="CorpoAba" id="CorpoAbaProdutos">
+                Produtos!
+            </div>
+
+            <!-- Estatísticas -->
+            <div class="CorpoAba" id="CorpoAbaEstatisticas">
+                Estatísticas!
+            </div>
+
         </main>
 
         <!-- Javascript-->
