Coberturinha ficou foi boa

--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
         <main>
             
             <!-- Início -->
-            <div class="CorpoAba" id="CorpoAbaInicio">
+            <div class="CorpoAba ativo" id="CorpoAbaInicio">
                 Início!
             </div>
 
