--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>Business PRO</title>
+        <title>Painel de controle</title>
         <link rel="shortcut icon" href="img/BusinessPro.png">
     </head>
     <body id="BodyDashboard">
