--- a/logon.html
+++ b/logon.html
@@ -65,6 +65,7 @@
                         <input type="hidden" name="tipo" value="login">
                         <button class="BotaoPrimario" type="submit">Entrar</button>
                     </form>
+                    <p>Esqueceu sua senha? Clique aqui.</p>
                 </div>
 
             </div>
