--- a/logon.html
+++ b/logon.html
@@ -47,7 +47,9 @@
                         <button class="ExibirSenha" id="ExibirSenhaR" type="button"><i class="fa-solid fa-eye"></i></button><br>
 
                         <input type="hidden" name="tipo" value="cadastro">
-                        <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
+                        <div class="LogOptionBotoes">
+                            <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
+                        </div>
                     </form>
                 </div>
 
@@ -63,7 +65,9 @@
                         <button class="ExibirSenha" id="ExibirSenhaL" type="button"><i class="fa-solid fa-eye"></i></button><br>
 
                         <input type="hidden" name="tipo" value="login">
-                        <button class="BotaoPrimario" type="submit">Entrar</button>
+                        <div class="LogOptionBotoes">
+                            <button class="BotaoPrimario" type="submit">Entrar</button>
+                        </div>
                     </form>
                     <p>Esqueceu sua senha? Clique aqui.</p>
                 </div>
