--- a/logon.html
+++ b/logon.html
@@ -48,6 +48,7 @@
 
                         <input type="hidden" name="tipo" value="cadastro">
                         <div class="LogOptionBotoes">
+                            <button class="BotaoSecundario" type="reset">Limpar dados</button>
                             <button class="BotaoPrimario" type="submit">Realizar cadastro</button>
                         </div>
                     </form>
@@ -66,6 +67,7 @@
 
                         <input type="hidden" name="tipo" value="login">
                         <div class="LogOptionBotoes">
+                            <button class="BotaoSecundario" id="BotaoEsqueciMinhaSenha" type="button">Esqueci minha senha</button>
                             <button class="BotaoPrimario" type="submit">Entrar</button>
                         </div>
                     </form>
