Nome da empresa vinculado

--- a/logon.html
+++ b/logon.html
@@ -39,6 +39,9 @@
                         <label for="NomeR">Nome</label><br>
                         <input class="FormularioCampoPrimario" type="text" id="NomeR" name="nome" placeholder="Ovídio Antoninho Marques" required><br>
 
+                        <label for="EmpresaR">Empresa</label><br>
+                        <input class="FormularioCampoPrimario" type="text" id="EmpresaR" name="empresa" placeholder="Nome da empresa" required><br>
+
                         <label for="EmailR">E-mail</label><br>
                         <input class="FormularioCampoPrimario" type="email" id="EmailR" name="email" placeholder="fulano@email.com" required><br>
 
