--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div class="Logo">
                     <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
                 </div>
+                <h1>Teste da Aline</h1>
                 <ul class="Lista">
                     <script>
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
@@ -36,7 +37,10 @@
 
         <!-- Corpo -->
         <main>
-            Introdução ao BusinessPRO
+            O BusinessPRO é uma solução digital desenvolvida especialmente para você que está buscando otimizar a gestão de seus negócios de maneira simples e eficiente. 
+            Com recursos intuitivos, o software permite (coisas legais) tudo em uma única plataforma. 
+            Ideal para quem quer aumentar a produtividade e tomar decisões mais assertivas, o BusinessPRO oferece ferramentas acessíveis para que você, 
+            empreendedor, possa focar no crescimento do seu negócio sem perder tempo com processos complexos.
         </main>
 
         <!-- Javascript-->
