--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <nav>
                 <div class="Logo">
                     <a href="index"><img src="img/BusinessPro.png" width="46px" height="46px"></a>
+                    <h1>BusinessPRO</h1>
                 </div>
-                <h1>Teste da Aline</h1>
                 <ul class="Lista">
                     <script>
                         if(sessionStorage.getItem('UsuarioLogado') != null) {
