aba lateral configurações

--- a/dashboard.html
+++ b/dashboard.html
@@ -69,6 +69,14 @@
                             Estatísticas
                         </span>
                     </li>
+                    <!-- Configurações -->
+                    <li class="BarraLateralItem">
+                        <i class="fa-solid fa-chart-line"></i>
+                        <span name="span" id="LateralAbaConfiguracoes" class="BarraLateralItemDescricao">
+                            Configurações
+                        </span>
+                    </li>
+
 
                 </ul>
 
