ìcone aline feia

--- a/dashboard.html
+++ b/dashboard.html
@@ -69,9 +69,10 @@
                             Estatísticas
                         </span>
                     </li>
+
                     <!-- Configurações -->
                     <li class="BarraLateralItem">
-                        <i class="fa-solid fa-chart-line"></i>
+                        <i class="fa-solid fa-gear"></i>
                         <span name="span" id="LateralAbaConfiguracoes" class="BarraLateralItemDescricao">
                             Configurações
                         </span>
@@ -126,6 +127,14 @@
             <div class="CorpoAba" id="CorpoAbaEstatisticas">
                 
                 <h1>Estatísticas</h1>
+                <p>Conteúdo da página</p>
+
+            </div>
+
+            <!-- Configurações -->
+            <div class="CorpoAba" id="CorpoAbaConfiguracoes">
+                
+                <h1>Configurações</h1>
                 <p>Conteúdo da página</p>
 
             </div>
