Tela de funcionários

--- a/dashboard.html
+++ b/dashboard.html
@@ -118,7 +118,33 @@
             <div class="CorpoAba" id="CorpoAbaFuncionarios">
                 
                 <h1>Funcionários</h1>
-                <p>Conteúdo da página</p>
+
+                <!-- Aba superior-->
+                <div class="AbaSuperiorFuncionarios">
+
+                    <!-- Pesquisar -->
+                    <form id="FuncionariosPesquisa">
+                        <input class="FormularioCampoPrimario" placeholder="Pesquisar">
+                        <input type="search" placeholder="Pesquisar2">
+                        <select name="cars" id="cars" form="FuncionariosPesquisa">
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                            <option value="mercedes">Mercedes</option>
+                            <option value="audi">Audi</option>
+                        </select>
+                    </form>
+
+                    <!-- Adicionar funcionários -->
+                    <form>
+
+                    </form>
+
+                </div>
+
+                <!-- Lista de funcionários -->
+                <div class="FuncionariosLista">
+
+                </div>
 
             </div>
 
