--- a/dashboard.html
+++ b/dashboard.html
@@ -120,18 +120,17 @@
                 <h1>Funcionários</h1>
 
                 <!-- Aba superior-->
-                <div class="AbaSuperiorFuncionarios">
+                <div class="CabecalhoPequeno">
 
                     <!-- Pesquisar -->
                     <form id="FuncionariosPesquisa">
-                        <input class="FormularioCampoPrimario" placeholder="Pesquisar">
-                        <input type="search" placeholder="Pesquisar2">
-                        <select name="cars" id="cars" form="FuncionariosPesquisa">
-                            <option value="volvo">Volvo</option>
-                            <option value="saab">Saab</option>
-                            <option value="mercedes">Mercedes</option>
-                            <option value="audi">Audi</option>
+                        <input type="search" id="PesquisarFuncionarios" name="pesquisa" class="FormularioCampoPrimario" placeholder="Pesquisar">
+                        <select name="classificar" id="ClassificarFuncionarios" form="FuncionariosPesquisa">
+                            <option value="nome">Nome</option>
+                            <option value="funcao">Função</option>
+                            <option value="data">Data de adição</option>
                         </select>
+                        <input type="submit" class="BotaoPrimario">
                     </form>
 
                     <!-- Adicionar funcionários -->
