Correção da borda

--- a/dashboard.html
+++ b/dashboard.html
@@ -120,7 +120,7 @@
                 <h1>Funcionários</h1>
 
                 <!-- Aba superior-->
-                <div class="CabecalhoPequeno">
+                <div id="FuncionariosCabecalhoPesquisa" class="CabecalhoPequeno">
 
                     <!-- Pesquisar -->
                     <form id="FuncionariosPesquisa">
@@ -131,11 +131,6 @@
                             <option value="data">Data de adição</option>
                         </select>
                         <input type="submit" class="BotaoPrimario">
-                    </form>
-
-                    <!-- Adicionar funcionários -->
-                    <form>
-
                     </form>
 
                 </div>
