Lista de funcionários

--- a/dashboard.html
+++ b/dashboard.html
@@ -118,6 +118,7 @@
             <div class="CorpoAba" id="CorpoAbaFuncionarios">
                 
                 <h1>Funcionários</h1>
+                <br>
 
                 <!-- Aba superior-->
                 <div id="FuncionariosCabecalhoPesquisa" class="CabecalhoPequeno">
@@ -136,7 +137,8 @@
                 </div>
 
                 <!-- Lista de funcionários -->
-                <div class="FuncionariosLista">
+                <br><h2>Lista de funcionários</h2>
+                <div class="FuncionariosLista" id="FuncionariosLista">
 
                 </div>
 
