Cabeçalho superior e botão de adição

--- a/dashboard.html
+++ b/dashboard.html
@@ -130,10 +130,10 @@
                 <h1>Funcionários</h1>
 
                 <!-- Aba superior-->
-                <div id="FuncionariosCabecalhoPesquisa" class="CabecalhoPequeno">
+                <div id="FuncionariosAbaSuperior" class="DashboardAbaSuperior">
 
                     <!-- Pesquisar -->
-                    <form id="FuncionariosPesquisa">
+                    <form id="FuncionariosPesquisa" class="CabecalhoPequeno">
                         <input type="search" id="PesquisarFuncionarios" name="pesquisa" class="FormularioCampoPrimario" placeholder="Pesquisar">
                         <select name="classificar" id="ClassificarFuncionarios" form="FuncionariosPesquisa">
                             <option value="nome">Nome</option>
@@ -142,6 +142,9 @@
                         </select>
                         <input type="submit" class="BotaoPrimario">
                     </form>
+
+                    <!-- Adicionar -->
+                    <button class="BotaoPrimario" id="BotaoAdicionarFuncionario">Adicionar funcionário</button>
 
                 </div>
 
