Botão do tamanho certo

--- a/dashboard.html
+++ b/dashboard.html
@@ -140,7 +140,7 @@
                             <option value="funcao">Função</option>
                             <option value="data">Data de adição</option>
                         </select>
-                        <input type="submit" class="BotaoPrimario">
+                        <input type="submit" class="BotaoPrimario" value="Pesquisar">
                     </form>
 
                     <!-- Adicionar -->
